// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack set given: [case1] repo without host manifest when: [t0] keyrack set --key NEW_KEY --mech REPLICA --vault os.direct --json then: stdout matches snapshot 1`] = `
{
  "createdAt": "__TIMESTAMP__",
  "env": "test",
  "exid": null,
  "maxDuration": null,
  "mech": "REPLICA",
  "org": "testorg",
  "slug": "testorg.test.NEW_KEY",
  "updatedAt": "__TIMESTAMP__",
  "vault": "os.direct",
  "vaultRecipient": null,
}
`;

exports[`keyrack set given: [case1] repo without host manifest when: [t1] keyrack list after set then: stdout matches snapshot 1`] = `
{
  "testorg.test.ANOTHER_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.test.ANOTHER_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
  "testorg.test.GITHUB_APP_CREDS": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.test.GITHUB_APP_CREDS",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
  "testorg.test.NEW_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.test.NEW_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
  "testorg.test.XAI_API_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.test.XAI_API_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
}
`;
